<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLeaderboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/leaderboard_title"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/purple_200"
                android:padding="5dp"
                android:text="@string/leaderboard_main_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />

            <Button
                android:id="@+id/leaderboard_switch_button"
                android:layout_width="145dp"
                android:layout_height="70dp"
                android:text="@string/leaderboard_switch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/leaderboard_player_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_player_title"

                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="2.7"
                    android:background="@drawable/rounded_left_component"
                    android:backgroundTint="#7CD0DC"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/my_rank_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leaderboard_rank_text"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/my_rank_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="n/a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_right_component"
                    android:backgroundTint="#A5ECE4"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/my_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leaderboard_username_text"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/my_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="n/a"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- TODO: This needs to be changed to a spinner once implemented! -->
            <TextView
                android:id="@+id/leaderboard_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_type"

                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leaderboard_list">

            </ListView>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>